# Jury_dagster

./: Dockerfile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: main.yaml
Jury_dagster/: BNS_sections.py  CPC_sections.py  CrPC.py  HMA_sections.py  IPC_sections.py  Income_tax.py  Lawyer_details.py  constitution.py  definitions.py  legal_queries.py  meilisearch.py  posh.py  supabase.py
deployments/: dep.yaml  ing.yaml  secret.yaml  service.yaml
