[project]
name = "Jury_dagster"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "dagster",
    "dagster-cloud",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver", 
    "pytest",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "Jury_dagster.definitions"
code_location_name = "Jury_dagster"

[tool.setuptools.packages.find]
exclude=["Jury_dagster_tests"]
